apps/ntfy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy-deployment
  namespace: ntfy
  labels:
    app: ntfy-deployment
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: ntfy-pod
  template:
    metadata:
      labels:
        app: ntfy-pod
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.29.0@sha256:4c599cf0818965782f93f652bd843e92714992e84d6b88ad17713dc0951cda1f
          imagePullPolicy: IfNotPresent
          args: ["serve"]
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              memory: 300Mi
              cpu: 200m
            requests:
              cpu: 150m
              memory: 150Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /v1/health
              port: http
            periodSeconds: 20
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /v1/health
              port: http
            periodSeconds: 5
            timeoutSeconds: 3
          volumeMounts:
            - mountPath: /etc/ntfy/server.yml
              subPath: server.yml
              name: config-volume
            - mountPath: /var/cache/ntfy
              name: cache-volume
            - mountPath: /var/lib/ntfy
              name: auth-volume
      volumes:
        - name: config-volume
          configMap:
            name: server-config
        - name: cache-volume
          persistentVolumeClaim:
            claimName: ntfy-cache-pvc
        - name: auth-volume
          persistentVolumeClaim:
            claimName: ntfy-auth-pvc
