apps/ntfy/alertmanager-ntfy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-ntfy-svc
  namespace: ntfy
  annotations:
    kube-vip.io/loadbalancerIPs: "${LAN_PREFIX}.20"
spec:
  type: LoadBalancer
  selector:
    app: alertmanager-ntfy-pod
  ports:
    - name: http
      protocol: TCP
      port: 4081
      targetPort: 8000
