apps/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy-svc
  namespace: ntfy
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "ntfy"
    kube-vip.io/loadbalancerIPs: "${LAN_PREFIX}.19"
spec:
  type: LoadBalancer
  selector:
    app: ntfy-pod
  ports:
    - name: http-ntfy-out
      protocol: TCP
      port: 4080
      targetPort: http
